   strings.
   Capitalize main window title.
   Add ui_widget_modify_font_from_string().
 * src/build.c, src/keybindings.c, src/msgwindow.c, src/msgwindow.h,
   src/vte.c, src/main.c:
   Add 'Hide Message Window' popup menu item for each window in the
   message window area.
   Add msgwin_menu_add_common_items().
   Move remaining message window setup code to msgwin_init().


2006-12-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/geany.h, src/keyfile.c, src/sciwrappers.c,
   src/sciwrappers.h: Added option to toggle usage of Tab button for
                      indentation.
 * geany.glade, po/POTFILES.in, src/callbacks.c, src/callbacks.h,
   src/interface.c, src/keybindings.c, src/keybindings.h,
   src/Makefile.am, src/makefile.win32, src/tools.c, src/tools.h:
   New files tools.c and tools.h.
   Added a dialog to insert HTML special characters.


2006-12-12  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/interface.c, src/callbacks.c, src/ui_utils.c,
   geany.glade:
   Use GNOME HIG Header style capitalization for all menu items.
 * src/main.c:
   Make files loaded from the command-line at startup get added to the
   recent files menus.


2006-12-11  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.vhdl: Fixed typo in "number" and "string" styles.


2006-12-11  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/main.c:
   Show GTK+, GLib runtime version debug message after socket_init().
 * src/callbacks.c:
   Make indenting and unindenting keep the same cursor position when
   the cursor is within the indentation characters.
 * configure.in:
   Link with libsocket if necessary to fix building on Solaris.


2006-12-10  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/build.c, src/callbacks.c, src/document.c, src/keyfile.c,
   src/prefs.c, src/vte.c, src/vte.h:
   Added option to execute programs in the VTE instead of executing
   them in a terminal emulation window (closes #1594456).