@@ -4696,6 +4696,25 @@ Bottom
 			  <property name="spacing">0</property>
 
 			  <child>
+			    <widget class="GtkCheckButton" id="checkbutton1">
+			      <property name="tooltip" translatable="yes">Use white text on a black background.</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Invert syntax highlighting colours</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
 			    <widget class="GtkCheckButton" id="check_indent">
 			      <property name="visible">True</property>
 			      <property name="tooltip" translatable="yes">Shows small dotted lines to help you to use the right indentation.</property>
